--- a/src/MyComponents/Authintication/components/Signin.css
+++ b/src/MyComponents/Authintication/components/Signin.css
@@ -1,14 +1,4 @@
-/* .signin{
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    background-color: rgb(239, 243, 243);
-    border-radius: 10px;
-    box-shadow: 2px 3px 7px rgb(212, 212, 212);
-    
-} */
+
 .big-div2{
     height: 100vh;
     width: 28%;
@@ -40,77 +30,42 @@
     
 }
 
-.signin {
-   
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-    border-radius: 10px;
-    box-shadow: rgb(102, 106, 102) 0px 3px 15px;
-    margin: 25px;
-    width: 320px;
-    height: 400px;
 
-}
 
-/* h1{
-    margin-right: 90px;
-} */
 
-/* .formp{
-    margin-left: 20px;
-} */
-
-/* .formp input{
-    margin-left: 20px;
-} */
-
-/* .signin>form{
-    display:grid;
-    flex-direction: column;
-} */
-.input{
-    background-color: rgb(225, 227, 227);
-    border: 2px solid rgb(135, 132, 132);
-    border-radius: 10px;
-    
-}
-.input1{
-    background-color: rgb(225, 227, 227);
-    border: 2px solid rgb(135, 132, 132);
-    border-radius: 10px;
-    margin-top: 0.6rem;
-}
-.signin>form>input{
+.head1{
+    padding-top: 2.5rem;
     margin-bottom: 1rem;
-    
-    width: 15rem;
-    border-radius: 5px;
-    padding: 5px;
-}
-.head{
-    padding-top: 3rem;
-    margin-bottom: 2.5rem;
+    font-weight: bold;
     font-size: 45px;
+    color: #51054f;
 }
+
 
 .signin_pointer{
     cursor: pointer;
-    width: 120px;
+    width: 200px;
     border-radius: 26px;
     padding: 6px;
-    
-    margin-top: 1.5rem;
     margin-left: 10px;
+    font-size: 1.2rem;
     
-    background: rgb(234, 61, 9);
+    background:#51054f;
     color: rgb(255, 255, 255);
-    
     margin-bottom: 10px;
+    
 }
 .h6{
-    padding-top: 1.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
 }
 
+.pass1{
+    margin: -5px 0 20px 5px;
+    color: #050404;
+    cursor: pointer;
+    padding-left: 10rem;
+  }
 .signin_link{
    cursor: pointer;
 }
@@ -125,18 +80,24 @@
         background-image: none;
         width: 100vw;
         
+        
     }
     .big-div2{
-
-        background-image: linear-gradient(to right top, #23f20d, #00ed78, #00e5af, #00d9d0, #12cada);
+        background-image: url(https://cdn.wallpapersafari.com/61/86/FxRXSd.jpg);
+        orientation:portrait;
+        background-repeat: no-repeat;
+        background-size:auto;
         width: 100vw;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        padding: auto;
+
+
+        justify-content: center;
+        
         
     }
     .big-div3{
         justify-content: center;
+       
+        
         
         
     }
@@ -145,17 +106,10 @@
         font-weight: bold;
         
     }
-    .signin{
-        
-        align-items: center;
-        margin: auto;
-        margin-top: 3rem;
-        display: flex;
-        orientation: portrait;
-        
-    }
+   
     .signin_pointer{
-        background-image: linear-gradient(to right top, #23f20d, #00ed78, #00e5af, #00d9d0, #12cada);
+        width: 120px;
+        
     }
 
 
