--- a/src/MyComponents/style/Credits.css
+++ b/src/MyComponents/style/Credits.css
@@ -14,10 +14,11 @@
   margin: 17px;
   padding: 10px 3px;
 }
-.card a{
+.card a {
   color: #111;
 }
-.card:hover, .card:hover a{
+.card:hover,
+.card:hover a {
   background: rgb(80, 79, 79);
   color: #fff;
 }
@@ -62,6 +63,18 @@ p {
   font-size: 24px;
   line-height: 36px;
 }
+@media (max-width: 1030px) {
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 45%;
+    float: left;
+    display: block;
+    margin: 10px;
+    padding: 10px 3px;
+  }
+}
+
 @media (max-width: 420px) {
   #user {
     display: block;
@@ -89,12 +102,11 @@ p {
     line-height: 20px;
   }
 }
-
-@media (max-width: 1030px) {
+@media (max-width: 550px) {
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 45%;
+    width: 90%;
     float: left;
     display: block;
     margin: 10px;
