--- a/src/MyComponents/Authintication/components/Signin.css
+++ b/src/MyComponents/Authintication/components/Signin.css
@@ -1,4 +1,3 @@
-
 .big-div2{
     height: 100vh;
     width: 28%;
@@ -30,8 +29,12 @@
     
 }
 
-
-
+.g-btn{
+    margin-left: 45px;;
+    padding-left: 20px;
+    padding-bottom: 1.2rem;
+    
+}
 
 .head1{
     padding-top: 2.5rem;
@@ -65,7 +68,8 @@
     color: #050404;
     cursor: pointer;
     padding-left: 10rem;
-  }
+}
+
 .signin_link{
    cursor: pointer;
 }
