--- a/src/MyComponents/style/Home.css
+++ b/src/MyComponents/style/Home.css
@@ -1,5 +1,5 @@
 #header {
-    background: url(../../Images/banner.jpg);
+    background: url(https://images.unsplash.com/photo-1523726491678-bf852e717f6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -24,13 +24,14 @@
     position: relative;
     left: 1.9rem;
 }
+
 #first {
     background: linear-gradient(rgba(23 78 98 / 70%), rgba(255, 255, 255, 0.1));
     margin-bottom: 0rem;
     text-align-last: left;
     padding: 2.5rem;
     position: relative;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     width: 100%;
 }
 
@@ -138,6 +139,7 @@
     .leading-relaxed {
         margin-bottom: 10px;
     }
+
     .carousel-inner {
         position: relative;
         top: 0.1rem;
@@ -157,13 +159,15 @@
         position: relative;
         left: -5.5rem;
     }
-    #blue-line{
+
+    #blue-line {
         margin-top: 0;
         margin-bottom: 0;
     }
 
     h1 {
-        font-size: 40px !important;
+        font-size: 24px !important;
+        font-weight: 100 !important;
     }
 }
 
@@ -176,7 +180,7 @@
 @media(max-width:340px) {
     .carousel-inner {
         position: relative;
-        left: 2.5rem;
+        left: -2.5rem;
         min-width: 10%;
     }
 
@@ -187,6 +191,6 @@
         font-weight: 100;
         position: relative;
         left: -6rem;
-        padding: 0px 60px;
+        padding: 0px 100px;
     }
 }
