Question page Update

--- a/src/MyComponents/Branch/Style/Branch.css
+++ b/src/MyComponents/Branch/Style/Branch.css
@@ -11,6 +11,7 @@
     margin: 10px;
     font-size: 25px;
     font-weight: 200;
+    border-radius: 30px;
 }
 
 #sub .btn {
@@ -18,4 +19,5 @@
     margin: 10px;
     font-size: 25px;
     font-weight: 200;
+    border-radius: 30px;
 }
