--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,27 @@ button[aria-expanded="true"] > .open {
     transform: rotate(360deg);
   }
 }
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px; */
+
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.9);
+  border-radius: 10px;
+  background-color: #cccccc;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, #b3e8fb),
+    color-stop(0.72, #7ecfed),
+    color-stop(0.86, #35b7e6)
+  );
+}
