Credits Page Update
All images have similar backgrounds and cards have a new border-radius and background!!

--- a/src/MyComponents/style/Credits.css
+++ b/src/MyComponents/style/Credits.css
@@ -13,6 +13,8 @@
   display: inline;
   margin: 17px;
   padding: 10px 3px;
+  border-radius: 15px;
+  background: #Dbe6ea;
 }
 .card a {
   color: #111;
