--- a/src/MyComponents/style/Home.css
+++ b/src/MyComponents/style/Home.css
@@ -193,6 +193,10 @@
   .gift {
     max-width: 22%;
   }
+  .MDU{
+    font-weight: 100;
+    font-size: 25px;
+  }
 }
 @media (max-width: 427px) {
   .leading-relaxed {
