Privacy and Faq Update
Css Update

Co-Authored-By: Surya Pratap Singh <72143906+surya123-ctrl@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -228,15 +228,16 @@ i {
 
 .qta {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 30px;
   margin-bottom: 1rem;
 }
 
 .ans-bank p {
-  font-size: 13px;
+  font-size: 25px;
   margin-left: 5rem;
   margin-right: 5rem;
   text-align: left;
+  margin-bottom: 0;
 }
 
 @media (max-width: 300px) {
