--- a/src/MyComponents/style/Navbar.css
+++ b/src/MyComponents/style/Navbar.css
@@ -8,7 +8,11 @@
   top: 0;
   z-index: 20;
 }
-
+h4{
+  text-align: left;
+  padding: 5px;
+  font-weight: 100;
+}
 ul {
   position: relative;
   left: -10rem;
