Most image links updated
All imgur links were outdated and images were not visible, a temporary solution has been done, but it will need a proper solution in time. Please look into this @surya123-ctrl

--- a/src/MyComponents/style/Credits.css
+++ b/src/MyComponents/style/Credits.css
@@ -48,8 +48,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 44%;
-  height: 13rem;
+  width: 200px;
+  height: 200px;
   max-width: 100%;
   border-radius: 50%;
 }
